--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,14 @@ li :last-child {
     margin: 30px 30px;
 }
 
+#portfolio h3 {
+    margin-top: 35px;
+}
+
+#portfolio p {
+    margin-bottom: 65px;
+}
+
 #portfolio img {
     max-width: 100%;
 }
@@ -122,10 +130,26 @@ footer a {
 }
 
 
+/*Tablet */
+@media only screen and (min-width: 768px) {
+    ul {
+        text-decoration: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 
-
-
-
-@media only screen and (max-width: 320px) {
+   #profile {
+       display: flex;
+       flex-direction: row-reverse;
+   }
+   
+   #portfolio {
+       display: flex;
+       flex-direction: column;
+       flex-wrap: wrap;
+      
+   }
 
 }
+ 
