--- a/css/style.css
+++ b/css/style.css
@@ -6,49 +6,44 @@
 }
 
 /* Header + Nav Bar*/
-header {
+.main-header,
+.nav {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-header {
+    padding-top: 2em;
+}
+
+#name {
+    width: 110px;
+    align-self: center;
+}
+
+.nav {
+    margin-top: 1.5em;
+}
+
+.nav a {
+    display: block;
+    color: #797e83;
+    font-size: 1.125em;
+    font-weight: 300;
     text-align: center;
-    margin-top: 30px;
+    padding: .4em;
+    border-bottom: 1px solid #ebecec;
+}
+
+.nav a:hover {
+    color: #0b0b0b;
+    border-bottom-color: #52bab3;
 }
 
 h1 {
     font-size: 2rem;
     margin-bottom: 30px;
-}
-
-nav {
-    margin: 15px 15px;
-}
-
-ul {
-    list-style: none;
-    border: 1px solid white;
-    width: auto;
-   
-}
-
-li {
-    border-bottom: 2px solid whitesmoke;
     text-align: center;
-}
-
-li a {
-    text-decoration: none;
-    color: black;
-    font-size: 1.1rem;
-    font-weight: bold;
-    display: block;
-    padding: 8px 16px;
-    background-color: white;
-}
-
-li a:hover {
-    background-color: cornflowerblue;
-    color: white;
-}
-
-li :last-child {
-    border-bottom: none;
 }
 
 /* Profile */
@@ -74,7 +69,8 @@ li :last-child {
 #portfolio {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 #portfolio h2, h3, p {
@@ -102,7 +98,7 @@ li :last-child {
 
 #contact h2 {
     text-align: center;
-    margin-top: 90px;
+    margin-top: 90px;s
 }
 
 #contact-info {
@@ -129,9 +125,29 @@ footer a {
     color: black;
 }
 
+/* Media Queries */
 
 /*Tablet */
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
+    .main-header {
+        height: 200px;  
+    }
+
+    #name {
+        width: 140px;
+    }
+
+    .nav {
+        margin-top: 3em;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .nav a {
+        border-bottom-color: transparent;
+    }
+
+
     ul {
         text-decoration: none;
         display: flex;
@@ -143,7 +159,7 @@ footer a {
        display: flex;
        flex-direction: row-reverse;
    }
-   
+ 
    #portfolio-container-1,
    #portfolio-container-2,
    #portfolio-container-3 {
@@ -164,5 +180,25 @@ footer a {
         display: flex;
         flex-direction: column;
     }
+}
 
- 
+@media (min-width: 1024px) {
+    .main-header {
+        flex-direction: row;
+    }
+
+    #name {
+        margin-right: auto;
+    }
+
+    .nav {
+        margin-top: 0;
+        align-self: center;
+    }
+
+    .nav li {
+        margin-left: .65em;
+        margin-right: .65em;
+    }
+
+  
