--- a/css/style.css
+++ b/css/style.css
@@ -5,200 +5,116 @@
     background-color: whitesmoke;
 }
 
-/* Header + Nav Bar*/
-.main-header,
-.nav {
+/* Header */
+.main-header {
     display: flex;
     flex-direction: column;
 }
 
-.main-header {
-    padding-top: 2em;
-}
-
 #name {
-    width: 110px;
+    padding: .5em 0;
     align-self: center;
 }
 
 .nav {
-    margin-top: 1.5em;
-}
-
-.nav a {
-    display: block;
-    color: #797e83;
-    font-size: 1.125em;
-    font-weight: 300;
+    align-self: center;
+    list-style: none;
+    width: 90%;
     text-align: center;
-    padding: .4em;
-    border-bottom: 1px solid #ebecec;
+    padding-bottom: 1.5em;
 }
 
-.nav a:hover {
-    color: #0b0b0b;
-    border-bottom-color: #52bab3;
-}
-
-h1 {
-    font-size: 2rem;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-/* Profile */
-#profile {
-    margin: 20px 20px;
+li a {
     display: flex;
     justify-content: center;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    font-weight: bold;
+    padding: 8px 16px; 
+    border-bottom: .4em solid whitesmoke;  
+}
+
+li a:hover {
+    background-color: teal;
+    color: white;
+}
+
+#profile {
+    display: flex;
     flex-direction: column;
-   
 }
 
-#profile-image {
-    padding: 25px 25px;
-    max-width: 100%;
+img {
+    width: 80%;
+    align-self: center;
 }
-
 #profile-text {
+    margin: 1.5em 0;
     text-align: center;
-    background-color: whitesmoke;
 }
 
-/*Portfolio*/
+/* Portfolio */
 #portfolio {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
-#portfolio h2, h3, p {
+
+#portfolio img {
+    width: 100%;
+}
+
+#portfolio h2 {
     text-align: center;
-    margin: 30px 30px;
+    padding: 1.5em 0;
 }
-
 #portfolio h3 {
-    margin-top: 35px;
+    padding: 1em 0;
+    text-align: center;
 }
 
 #portfolio p {
-    margin-bottom: 65px;
+    padding-bottom: 1.5em;
+    text-align: center;
 }
 
-#portfolio img {
-    max-width: 100%;
-}
-
-/*Contact*/
+/* Contact */
 #contact {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding-top: 1.5em;
 }
 
-#contact h2 {
+#contact p {
+    padding-top: 1.2em;
     text-align: center;
-    margin-top: 90px;s
 }
 
 #contact-info {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    padding: .5em 0;
 }
 
-/*Footer*/
+/* Footer */
 footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-footer p {
-    font-weight: bold;
-    font-size: 0.9rem;
+
+p {
+    margin: 1.5em 0;
 }
 
-footer a {
+p a {
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
 
-/* Media Queries */
-
-/*Tablet */
-@media (min-width: 768px) {
-    .main-header {
-        height: 200px;  
-    }
-
-    #name {
-        width: 140px;
-    }
-
-    .nav {
-        margin-top: 3em;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .nav a {
-        border-bottom-color: transparent;
-    }
 
 
-    ul {
-        text-decoration: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
 
-   #profile {
-       display: flex;
-       flex-direction: row-reverse;
-   }
- 
-   #portfolio-container-1,
-   #portfolio-container-2,
-   #portfolio-container-3 {
-        display: flex;
-        padding: 0 15px;
-    }
-
-    #image-1,
-    #image-2,
-    #image-3,
-    #image-4,
-    #image-5,
-    #iamge-6 {
-        padding: 0 5px;
-    }
-
-    #contact-info {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media (min-width: 1024px) {
-    .main-header {
-        flex-direction: row;
-    }
-
-    #name {
-        margin-right: auto;
-    }
-
-    .nav {
-        margin-top: 0;
-        align-self: center;
-    }
-
-    .nav li {
-        margin-left: .65em;
-        margin-right: .65em;
-    }
-
-  
