--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,11 @@ p a {
 
 @media only screen and (min-width:1024px) {
     /* Header */
+    .main-header {
+        display: flex;
+        flex-direction: row;
+    }
+
     
 
     
