--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
-    background-color: whitesmoke
+    background-color: whitesmoke;
+    box-sizing: border-box;
 }
 
 /* Header */
@@ -11,6 +12,10 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+}
+
+.laptop-header {
+    display: none;
 }
 
 #name {
@@ -101,13 +106,13 @@ img {
 }
 
 /* Footer */
-footer {
+.footer-1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-footer .nav {
+.footer-2{
     display: none;
 }
 
@@ -169,18 +174,19 @@ p a {
     }
 
     .container {
-        display: flex;    
+        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;     
     }
 
-    #image-1,
-    #image-2,
-    #image-3,
-    #image-4,
-    #image-5,
-    #image-6 {
-        flex: 1 50%;
+    .container section {
+        align-items: center;
+        width: 45%;
     }
+
+ 
 
     /* Contact */
     #contact {
@@ -199,22 +205,36 @@ p a {
         justify-content: center;
     }
 
-    footer #back-to-top {
+    .footer-1 {
         display: none;
     }
 
-    footer .nav {
+    .footer-2 {
         display: flex;
-        justify-content: flex-end;
+        flex-direction: row;
+        /*Need edit*/
     }
+   
 }
 
 @media only screen and (min-width:1024px) {
     /* Header */
     .main-header {
+        display: none
+    }
+
+
+
+    .laptop-header {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
+        margin-top: 4rem;
+        margin-left: 3rem;
+        width: 91%;
+
+        
+
     }
 
     /* Portfolio */
@@ -225,6 +245,9 @@ p a {
     #image-5,
     #image-6 {
         flex: 1 33%;
+    }
+
+
     }
 
     /* Contact */
