Second Submission Edits
Edits prior to second submission

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+    margin-top: 2rem;
 }
 
 .laptop-header {
@@ -21,10 +22,10 @@
 #name {
     padding: .5em 0;
     align-self: center;
-    margin-top: 1em;
 }
 
 .nav {
+    margin-top: 1.2rem;
     align-self: center;
     list-style: none;
     width: 90%;
@@ -112,7 +113,7 @@ img {
     justify-content: space-around;
 }
 
-.footer-2{
+.footer-2 {
     display: none;
 }
 
@@ -171,7 +172,8 @@ p a {
     /* Portfolio */
     #portfolio {
         display: flex;
-        flex-direction: column
+        flex-direction: column;
+        margin-top: 3em;
     }
 
     #image-1,
@@ -216,7 +218,7 @@ p a {
     .footer-2 {
         display: flex;
         margin: 1rem 1rem;
-        /*Needs Edit*/
+        
     }
 
  
@@ -277,10 +279,14 @@ p a {
         display: none;
     }
 
+    .footer-2 {
+        justify-content: space-between;
+    }
+
     .footer-2 .nav {
         display: flex;
-       justify-content: flex-end;
-         /*Needs Edit*/
+        justify-content: flex-end;
+       width: 40%;
     }
 
 }
